<resources>
    <string name="app_name">Calc1App</string>
    <string name="app_num0">0</string>
    <string name="app_num1">1</string>
    <string name="app_num2">2</string>
    <string name="app_num3">3</string>
    <string name="app_num4">4</string>
    <string name="app_num5">5</string>
    <string name="app_num6">6</string>
    <string name="app_num7">7</string>
    <string name="app_num8">8</string>
    <string name="app_num9">9</string>
    <string name="app_dot">.</string>
</resources>
