<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/textBox"
        android:layout_width="match_parent"
        android:layout_height="@dimen/textBox_height"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/textBox_marginBottom">
        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/text_textSize"
            android:maxLength="50"
            android:background="@color/colorTextView"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/row1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_height"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/row_margin"
        android:layout_marginRight="@dimen/row_margin"
        android:layout_marginBottom="@dimen/row_margin">
        <Button
            android:id="@+id/num7"
            android:layout_width="@dimen/num_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/app_num7"
            android:textSize="@dimen/num_textSize"

            />
        <Button
            android:id="@+id/num8"
            android:layout_width="@dimen/num_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/app_num8"
            android:textSize="@dimen/num_textSize"
            />
        <Button
            android:id="@+id/num9"
            android:layout_width="@dimen/num_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/app_num9"
            android:textSize="@dimen/num_textSize"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/row2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_height"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/row_margin"
        android:layout_marginRight="@dimen/row_margin"
        android:layout_marginBottom="@dimen/row_margin">
        <Button
            android:id="@+id/num4"
            android:layout_width="@dimen/num_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/app_num4"
            android:textSize="@dimen/num_textSize"
            />
        <Button
            android:id="@+id/num5"
            android:layout_width="@dimen/num_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/app_num5"
            android:textSize="@dimen/num_textSize"
            />
        <Button
            android:id="@+id/num6"
            android:layout_width="@dimen/num_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/app_num6"
            android:textSize="@dimen/num_textSize"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/row3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_height"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/row_margin"
        android:layout_marginRight="@dimen/row_margin"
        android:layout_marginBottom="@dimen/row_margin">
        <Button
            android:id="@+id/num1"
            android:layout_width="@dimen/num_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/app_num1"
            android:textSize="@dimen/num_textSize"
            />
        <Button
            android:id="@+id/num2"
            android:layout_width="@dimen/num_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/app_num2"
            android:textSize="@dimen/num_textSize"
            />
        <Button
            android:id="@+id/num3"
            android:layout_width="@dimen/num_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/app_num3"
            android:textSize="@dimen/num_textSize"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/row4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_height"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/row_margin"
        android:layout_marginRight="@dimen/row_margin"
        android:layout_marginBottom="@dimen/row_margin">
        <Button
            android:id="@+id/num0"
            android:layout_width="@dimen/num_width"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/app_num0"
            android:textSize="@dimen/num_textSize"
            />
        <Button
            android:id="@+id/dot"
            android:layout_width="@dimen/num_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/app_dot"
            android:textSize="@dimen/num_textSize"
            />
    </LinearLayout>
</LinearLayout>